Agregando dos parrafos

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
         <li>Otoño - 21 de septiembre</li>
         <li>Invierno - 21 de diciembre</li>
     </ol>
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem consequatur quaerat, ipsam, necessitatibus
+        repellendus minus laudantium impedit, exercitationem dolor quod fugit. Iste quidem cum alias voluptates magnam
+        tempora ut et.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ut necessitatibus ratione error, consequatur
+        aspernatur magnam, cum nobis illum omnis vel similique, aperiam quisquam quia laboriosam unde qui eligendi
+        reiciendis?
+    </p>
     <script src="index.js"></script>
 </body>
 
