Agregando imagen de flujo Git y poniendo chulo el index.html

--- a/index.html
+++ b/index.html
@@ -12,29 +12,11 @@
 <body>
     <h1>Aprendiendo Git</h1>
     <p>Mis primeros pasos en el versionado de codigo, aprendiendo a resolver conflictos entre ramas</p>
-    <ul>
-        <li>Elemento 1</li>
-        <li>Elemento 2</li>
-        <li>Elemento 3</li>
-        <li>Elemento 4</li>
-        <li>Elemento 5</li>
-    </ul>
-    <ol>
-        <li>Primavera - 21 de marzo</li>
-        <li>Verano - 21 de junio</li>
-        <li>Otoño - 21 de septiembre</li>
-        <li>Invierno - 21 de diciembre</li>
-    </ol>
     <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem consequatur quaerat, ipsam, necessitatibus
-        repellendus minus laudantium impedit, exercitationem dolor quod fugit. Iste quidem cum alias voluptates magnam
-        tempora ut et.
+        Quieres dominar el uso de git mira este
+        <a href="https://jonmircha.com/git" target="_blank">Enlace</a>
     </p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ut necessitatibus ratione error, consequatur
-        aspernatur magnam, cum nobis illum omnis vel similique, aperiam quisquam quia laboriosam unde qui eligendi
-        reiciendis?
-    </p>
+    <img src="git-flow.png" alt="Flujo básico de Git">
     <script src="index.js"></script>
 </body>
 
